_docs/v0.62/embedding/sdk/api/snippets/InteractiveQuestionProps.md
---
version: v0.62
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: InteractiveQuestionProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/InteractiveQuestionProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                    | Type                                                                                                                                                                                                                                                                                                 | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| :---------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="classname"></a> `className?`                         | `string`                                                                                                                                                                                                                                                                                             | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| <a id="datapicker"></a> `dataPicker?`                       | [`EmbeddingDataPicker`](./api/EmbeddingDataPicker)                                                                                                                                                                                                                                                | Controls the menu for selecting data sources in questions. You can opt for the full data picker by setting `dataPicker = "staged"`.                                                                                                                                                                                                                                                                                                                                                        |
| <a id="entitytypes"></a> `entityTypes?`                     | [`EmbeddingEntityType`](./api/EmbeddingEntityType)[]                                                                                                                                                                                                                                              | An array that specifies which entity types are available in the data picker                                                                                                                                                                                                                                                                                                                                                                                                                |
| <a id="height"></a> `height?`                               | `Height`\<`string` \| `number`\>                                                                                                                                                                                                                                                                     | A number or string specifying a CSS size value that specifies the height of the component                                                                                                                                                                                                                                                                                                                                                                                                  |
| <a id="hiddenparameters"></a> `hiddenParameters?`           | `string`[]                                                                                                                                                                                                                                                                                           | A list of parameters to hide.                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| <a id="initialcollection"></a> `initialCollection?`         | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                                                                                                                                                        | The collection to preselect in the save modal's collection picker. Unlike `targetCollection`, the picker remains visible and the user can choose a different collection. Ignored when `targetCollection` is set.                                                                                                                                                                                                                                                                           |
| <a id="initialsqlparameters"></a> `initialSqlParameters?`   | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                                                                                                                                                                                  | Initial values for SQL parameters, slug-keyed. Applied once on mount; user widget edits afterwards are not reflected back to the host. <br/> For each parameter: <br/> - set to a value: that value is applied. <br/> - set to `null`: strictly cleared, ignoring the parameter's default. <br/> - omitted (or set to `undefined`): falls back to the parameter's default (or `null` if it has no default).                                                                                |
| <a id="issaveenabled"></a> `isSaveEnabled?`                 | `boolean`                                                                                                                                                                                                                                                                                            | Whether to show the save button.                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| <a id="onbeforesave"></a> `onBeforeSave?`                   | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion) \| `undefined`, `context`: \{ `isNewQuestion`: `boolean`; \}) => [`Promise`](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Promise)\<`void`\>                                                              | A callback function that triggers before saving. Only relevant when `isSaveEnabled = true`                                                                                                                                                                                                                                                                                                                                                                                                 |
| <a id="onnavigateback"></a> `onNavigateBack?`               | () => `void`                                                                                                                                                                                                                                                                                         | A callback function that triggers when a user clicks the back button.                                                                                                                                                                                                                                                                                                                                                                                                                      |
| <a id="onrun"></a> `onRun?`                                 | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion) \| `undefined`) => `void`                                                                                                                                                                                                               | A callback function that triggers when a question is updated, including when a user clicks the `Visualize` button in the question editor                                                                                                                                                                                                                                                                                                                                                   |
| <a id="onsave"></a> `onSave?`                               | (`question`: [`MetabaseQuestion`](./api/MetabaseQuestion), `context`: \{ `dashboardTabId?`: `number`; `isNewQuestion`: `boolean`; \}) => `void`                                                                                                                                                   | A callback function that triggers when a user saves the question. Only relevant when `isSaveEnabled = true`                                                                                                                                                                                                                                                                                                                                                                                |
| <a id="onsqlparameterschange"></a> `onSqlParametersChange?` | (`payload`: [`SqlParameterChangePayload`](./api/SqlParameterChangePayload)) => `void`                                                                                                                                                                                                             | Fires on SQL parameters change. The payload's `source` distinguishes the initial state on load (`'initial-state'`), user edits in the UI (`'manual-change'`), and auto-updates (`'auto-change'`).                                                                                                                                                                                                                                                                                          |
| <a id="onvisualizationchange"></a> `onVisualizationChange?` | (`display`: \| `"object"` \| `"table"` \| `"bar"` \| `"line"` \| `"pie"` \| `"scalar"` \| `"row"` \| `"area"` \| `"combo"` \| `"pivot"` \| `"smartscalar"` \| `"gauge"` \| `"progress"` \| `"funnel"` \| `"map"` \| `"scatter"` \| `"boxplot"` \| `"waterfall"` \| `"sankey"` \| `"list"`) => `void` | A callback function that triggers when the visualization type changes.                                                                                                                                                                                                                                                                                                                                                                                                                     |
| <a id="plugins"></a> `plugins?`                             | [`MetabasePluginsConfig`](./api/MetabasePluginsConfig)                                                                                                                                                                                                                                            | -                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| <a id="query"></a> `query?`                                 | `undefined`                                                                                                                                                                                                                                                                                          | -                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| <a id="questionid"></a> `questionId?`                       | [`SdkQuestionId`](./api/SdkQuestionId) \| `null`                                                                                                                                                                                                                                                  | The ID of the question. <br/> This is either: <br/> - the numerical ID when accessing a question link, i.e. `http://localhost:3000/question/1-my-question` where the ID is `1` <br/> - the string ID found in the `entity_id` key of the question object when using the API directly or using the SDK Collection Browser to return data <br/> - `new` to show the notebook editor for creating new questions <br/> - `new-native` to show the SQL editor for creating new native questions |
| <a id="sqlparameters"></a> `sqlParameters?`                 | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                                                                                                                                                                                  | Controlled SQL parameter values, slug-keyed. On every render, this object replaces the question's parameter values: <br/> - a parameter set to a value uses that value. <br/> - a parameter set to `null` is cleared, even if it has a default. <br/> - a parameter omitted from the object (or set to `undefined`) uses its default (or `null` if it has no default). <br/> <br/> Pair with `onSqlParametersChange` to stay in sync with user edits.                                      |
| <a id="style"></a> `style?`                                 | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579)                                                                                                                                                     | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| <a id="targetcollection"></a> `targetCollection?`           | [`SdkCollectionId`](./api/SdkCollectionId)                                                                                                                                                                                                                                                        | The collection to save the question to. This will hide the collection picker from the save modal. Only applicable to interactive questions.                                                                                                                                                                                                                                                                                                                                                |
| <a id="title"></a> `title?`                                 | [`SdkQuestionTitleProps`](./api/SdkQuestionTitleProps)                                                                                                                                                                                                                                            | Determines whether the question title is displayed, and allows a custom title to be displayed instead of the default question title. Shown by default.                                                                                                                                                                                                                                                                                                                                     |
| <a id="token"></a> `token?`                                 | `string` \| `null`                                                                                                                                                                                                                                                                                   | A valid JWT token for the guest embed.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| <a id="width"></a> `width?`                                 | `Width`\<`string` \| `number`\>                                                                                                                                                                                                                                                                      | A number or string specifying a CSS size value that specifies the width of the component                                                                                                                                                                                                                                                                                                                                                                                                   |
| <a id="withalerts"></a> `withAlerts?`                       | `boolean`                                                                                                                                                                                                                                                                                            | Enables the ability to set up alerts on the question.                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| <a id="withcharttypeselector"></a> `withChartTypeSelector?` | `boolean`                                                                                                                                                                                                                                                                                            | Determines whether the chart type selector and corresponding settings button are shown. Only relevant when using the default layout.                                                                                                                                                                                                                                                                                                                                                       |
| <a id="withdownloads"></a> `withDownloads?`                 | `boolean`                                                                                                                                                                                                                                                                                            | Enables the ability to download results in the question.                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| <a id="witheditorbutton"></a> `withEditorButton?`           | `boolean`                                                                                                                                                                                                                                                                                            | Determines whether the editor button is shown. Only relevant when using the default layout.                                                                                                                                                                                                                                                                                                                                                                                                |

<!-- [<endsnippet properties>] -->
